--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,17 +7,23 @@
     "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
     "@lottiefiles/dotlottie-react": "^0.11.0",
+    "@maptiler/sdk": "^3.0.1",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@testing-library/user-event": "^13.5.0",
+    "@types/mapbox-gl": "^3.4.1",
     "axios": "^1.7.9",
     "eslint-config-react-app": "^7.0.1",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
+    "mapbox-gl": "^3.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^7.1.8",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
