--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@maptiler/sdk": "^3.0.1",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/mapbox-gl": "^3.4.1",
     "axios": "^1.7.9",
@@ -23,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "react-map-gl": "^7.1.8",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
