--- a/dotnetcorebackend/appsettings.json
+++ b/dotnetcorebackend/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "PinQuestDBConnection": "Host=localhost; Database=PinQuest; Username=postgres; Password=1234;Pooling=true;"
   },
+  "Jwt": {
+    "Key": "mnbvcxdertyuikiuytrdcvbhji876tredcvdfghuytrdsasdrftyter",
+    "Issuer": "https://localhost:7197",
+    "Audience": "http://localhost:3000/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
