Otp verification completed

--- a/dotnetcorebackend/appsettings.json
+++ b/dotnetcorebackend/appsettings.json
@@ -7,6 +7,13 @@
     "Issuer": "https://localhost:7197",
     "Audience": "http://localhost:3000/"
   },
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "rkcoding476@gmail.com",
+    "Password": "sodw xsoe nbxz uzfg",
+    "From": "rkcoding476@gmail.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
