--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=http://localhost:8800/api/
+REACT_APP_NODE_API_URL=http://localhost:8800/api/
+REACT_APP_NET_API_URL=https://localhost:7197/api/
 REACT_APP_MAPTILER_API_KEY=VAYatajGEgbMpC217RqV
