--- a/dotnetcorebackend/appsettings.json
+++ b/dotnetcorebackend/appsettings.json
@@ -11,7 +11,7 @@
     "Host": "smtp.gmail.com",
     "Port": "587",
     "Username": "rkcoding476@gmail.com",
-    "Password": "sodw xsoe nbxz uzfg",
+    "Password": "qwtt adnw ueqj guwf",
     "From": "rkcoding476@gmail.com"
   },
   "Logging": {
