--- a/backend.test/backend.test.csproj
+++ b/backend.test/backend.test.csproj
@@ -23,9 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <Folder Include="Controllers.test\" />
   </ItemGroup>
 
   <ItemGroup>
