Added RegisterHandler Test case

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@reduxjs/toolkit": "^2.5.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/mapbox-gl": "^3.4.1",
     "axios": "^1.7.9",
     "eslint-config-react-app": "^7.0.1",
@@ -37,7 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -68,8 +67,10 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "babel-jest": "^29.7.0",
+    "jest": "^27.5.1",
     "jest-canvas-mock": "^2.5.2"
   }
 }
